--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
+# Игнорировать временные файлы редактора
 *.log
+*.tmp
+
+# Игнорировать папки с зависимостями
 node_modules/
+vendor/
+
+# Игнорировать кэшированные файлы и сборку
+dist/
+build/
+
+# Игнорировать конфиденциальные файлы
+.env
+config/secrets.json
